# osmo-mgw

./: Makefile.am  TODO-RELEASE  configure.ac  osmoappdesc.py
contrib/: jenkins.sh
debian/: control
include/: Makefile.am
include/osmocom/: Makefile.am
include/osmocom/legacy_mgcp/: Makefile.am  mgcp.h  mgcp_conn.h  mgcp_internal.h  mgcp_msg.h  mgcp_stat.h  mgcpgw_client.h  vty.h
include/osmocom/mgcp/: Makefile.am  debug.h  mgcp.h  mgcp_common.h  mgcp_conn.h  mgcp_ep.h  mgcp_internal.h  mgcp_msg.h  mgcp_sdp.h  osmux.h
include/osmocom/mgcp_client/: mgcp_client.h
src/: Makefile.am
src/libosmo-legacy-mgcp/: Makefile.am  mgcp_conn.c  mgcp_network.c  mgcp_osmux.c  mgcp_protocol.c  mgcp_sdp.c  mgcp_stat.c  mgcp_vty.c  mgcpgw_client.c  mgcpgw_client_vty.c
src/libosmo-mgcp/: Makefile.am  mgcp_common.c  mgcp_conn.c  mgcp_ep.c  mgcp_msg.c  mgcp_network.c  mgcp_osmux.c  mgcp_protocol.c  mgcp_sdp.c  mgcp_stat.c  mgcp_transcode.c  mgcp_vty.c  mgcpgw_client.c  mgcpgw_client_vty.c
src/libosmo-mgcp-client/: Makefile.am  mgcp_client.c  mgcp_client_vty.c
src/osmo-bsc_mgcp/: Makefile.am  mgcp_main.c
src/osmo-mgw/: mgw_main.c
tests/: Makefile.am  testsuite.at
tests/legacy_mgcp/: Makefile.am  mgcp_test.c  mgcp_transcoding_test.c  mgcpgw_client_test.c
tests/mgcp/: Makefile.am  mgcp_test.c  mgcp_transcoding_test.c  mgcpgw_client_test.c
tests/mgcp_client/: mgcp_client_test.c  mgcp_client_test.ok
